test/langtools/tools/javac/specialConstantFolding/ReflectiveErrorTest.out
ReflectiveErrorTest.java:11:56: compiler.err.reflective.error: ofDescriptor, java.lang.invoke.MethodTypeRef
1 error
